--- a/templates/foodtruck/profile_detail.html
+++ b/templates/foodtruck/profile_detail.html
@@ -6,6 +6,9 @@
       max-width: 300px;
       text-align: center;
     }
+    .centered {
+      padding-left: 75px;
+    }
   </style>
 {% endblock %}
 
@@ -20,9 +23,12 @@
       <img class="ui medium rounded image" id="profile_pic" src="{{ MEDIA_URL }}{{ object.image_url }}" alt="Picture of {{ object.image_url }}" /><br>
 
       {% if object.user == request.user %}
+      <div class="centered">
         <a href="{% url 'image_update_view' user.id %}"> <i class="black image icon"></i> Update Image</a> <br>
         <a href="{% url 'email_update_view' user.id %}"> <i class="black mail outline icon"></i> Update Email</a><br>
         <a href="{% url 'profile_list_api_view' %}">View your API</a>
+      </div>
+
       {% endif %}
       <div class="ui attached message">
         <div class="header">
