styling up the list

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,7 +12,7 @@
 {% block content %}
 <br><br><br>
 <div class="ui middle aligned center aligned grid">
-  <div class="blue column">
+  <div class="column">
     <div class="ui stacked form segment">
       <div class="ui blue attached message">
         <div class="header">
