optimized the program

--- a/templates/map.html
+++ b/templates/map.html
@@ -17,6 +17,7 @@
 
 {% block content %}
 <br><br>
+{% comment %}
 <div class="ui middle aligned center aligned grid">
   <p>
     <b id="font">Find Which Trucks Are Around You!</b>
@@ -89,6 +90,7 @@
     });
   }
 </script>
+{% endcomment %}
 <br><br>
 
 
