--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,7 @@
     </div>
     {% if request.user.is_authenticated %}
     <div class="eight wide column">
+      {% comment %}
       <b>Find Which Trucks Are Around You!</b> <br>
       <div class="ui left corner input">
         <i class="big home icon"></i>
@@ -137,6 +138,7 @@
           });
         }
       </script>
+      {% endcomment %}
       <br><br>
 
 
