--- a/templates/foodtruck/profile_comment_form.html
+++ b/templates/foodtruck/profile_comment_form.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 
+{% block css %}
+  <style media="screen">
+    .column {
+      max-width: 650px;
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
 <br><br>
 <div class="ui middle aligned center aligned grid">
