editing the accordion

--- a/templates/foodtruck/profile_detail.html
+++ b/templates/foodtruck/profile_detail.html
@@ -104,7 +104,7 @@
                           <form class="" action="{% url 'profile_reply_update_view' reply.id %}" method="post">
                             {% csrf_token %}
                             <textarea name="reply" rows="4" cols="35"></textarea>
-                            <button type="submit" class="tiny ui blue submit button"><i class="update icon"></i> Update!</button>
+                            <button type="submit" class="tiny ui blue submit button"><i class="edit icon"></i> Update!</button>
                           </form>
                         </p>
                       </div>
