--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Foodtruck Finder</title>
+    <title>Chowster</title>
 
     <link type="text/css" rel="stylesheet" href="{% static 'semantic.css' %}"  media="screen"/>
 
@@ -43,7 +43,7 @@
       </style>
   </head>
   <body>
-    
+
     <div class="body">
       <div class="ui sidebar vertical left inverted menu">
         {% if not request.user.is_authenticated %}
