--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,6 +19,7 @@
           <h2>If you have any Questions or Comments please contact me!</h2>
         </div>
       </div>
+      {% comment %}
       <form class="ui form attached fluid segment" action="{% url 'send_mail' %}" method="post">
         {% csrf_token %}
         <p>
@@ -31,6 +32,8 @@
          Contact Me!
        </button>
       </form>
+      {% endcomment %}
+      <h2><a href="mailto:fsciety1@gmail.com"><i class="mail square icon"></i> Contact Me!</a></h2>
     </div>
   </div>
 </div>
