--- a/templates/foodtruck/menu_form.html
+++ b/templates/foodtruck/menu_form.html
@@ -28,7 +28,7 @@
             <input type="submit" class="ui blue submit button" name="" value="New Food Item!">
           </form>
         </div>
-        <b><a href="{% url 'index_view' %}">Finished Making Menu, Back to Home</a></b>
+        <b><a href="{% url 'foodtruck_detail_view' menu.id %}">Finished Making Menu, Back to Home</a></b>
       </div>
     </div>
 
