--- a/templates/foodtruck/location_update.html
+++ b/templates/foodtruck/location_update.html
@@ -22,7 +22,12 @@
         </div>
         <form class="ui form attached fluid segment" action="" method="post" enctype="multipart/form-data">
           {% csrf_token %}
-          {{ form.as_p }}
+          <p><label for="id_address">Address:</label>
+          <input id="id_address" maxlength="255" name="address" type="text"></p>
+          <p><label for="id_start_time">Start time:</label>
+          <input type="text" name="start_time" id="id_start_time" data-time-format="H:i"></p>
+          <p><label for="id_end_time">End time:</label>
+          <input type="text" name="end_time" id="id_end_time" data-time-format="H:i"></p>
           <input type="submit" class="ui blue submit button" name="" value="New Location!">
         </form>
       </div>
@@ -31,4 +36,29 @@
   {% else %}
     <h1>CAN'T CHANGE LOCATIONS!!!</h1>
   {% endif %}
+{% endblock %}
+
+{% block js %}
+  <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+
+  <script type="text/javascript">
+    $('#id_start_time').timepicker({
+        timeFormat: 'h:mm p',
+        interval: 15,
+        defaultTime: '11',
+        startTime: '00:00',
+        dynamic: false,
+        dropdown: true,
+        scrollbar: true
+    });
+    $('#id_end_time').timepicker({
+        timeFormat: 'h:mm p',
+        interval: 15,
+        defaultTime: '11',
+        startTime: '00:00',
+        dynamic: false,
+        dropdown: true,
+        scrollbar: true
+    });
+  </script>
 {% endblock %}
