--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
                       if (obj.checked_in == true) {
                         var marker = new google.maps.Marker({
                           position: x,
-                          icon: {url: obj.picture,
+                          icon: {
                                   size: new google.maps.Size(50, 50),
                                   origin: new google.maps.Point(0, 0),
                                   anchor: new google.maps.Point(17, 34),
@@ -190,7 +190,7 @@
                       if (obj.checked_in == true) {
                         var marker = new google.maps.Marker({
                           position: x,
-                          icon: {url: obj.picture,
+                          icon: {
                                       size: new google.maps.Size(50, 50),
                                       origin: new google.maps.Point(0, 0),
                                       anchor: new google.maps.Point(17, 34),
