--- a/templates/map.html
+++ b/templates/map.html
@@ -55,7 +55,7 @@
                 if (obj.checked_in == true) {
                   var marker = new google.maps.Marker({
                     position: x,
-                    icon: {url: obj.picture,
+                    icon: {
                             size: new google.maps.Size(50, 50),
                             origin: new google.maps.Point(0, 0),
                             anchor: new google.maps.Point(17, 34),
@@ -144,7 +144,7 @@
                 if (obj.checked_in == true) {
                   var marker = new google.maps.Marker({
                     position: x,
-                    icon: {url: obj.picture,
+                    icon: {
                             size: new google.maps.Size(50, 50),
                             origin: new google.maps.Point(0, 0),
                             anchor: new google.maps.Point(17, 34),
